[gd_scene load_steps=5 format=3 uid="uid://k6iu3f6gxjmv"]

[ext_resource type="Script" path="res://main.gd" id="1_2wqjk"]
[ext_resource type="PackedScene" uid="uid://buy076pd5xjtc" path="res://world/world.tscn" id="1_ps34b"]
[ext_resource type="PackedScene" uid="uid://bicxxsvdda42l" path="res://gui/gui.tscn" id="2_v16o8"]
[ext_resource type="PackedScene" uid="uid://3yp2qaf367ht" path="res://sound_controller.tscn" id="4_b2s0d"]

[node name="Main" type="Node"]
script = ExtResource("1_2wqjk")

[node name="World" parent="." instance=ExtResource("1_ps34b")]

[node name="GUI" parent="." instance=ExtResource("2_v16o8")]

[node name="SoundController" parent="." instance=ExtResource("4_b2s0d")]

[node name="SecretEndTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[connection signal="game_over" from="." to="GUI" method="_on_game_over"]
[connection signal="game_over" from="." to="SoundController" method="play_game_over_sound"]
[connection signal="game_started" from="." to="World" method="_on_game_started"]
[connection signal="game_started" from="." to="GUI" method="_on_game_started"]
[connection signal="game_started" from="." to="SoundController" method="start_background_music"]
[connection signal="game_won" from="." to="World" method="_on_game_won"]
[connection signal="game_won" from="." to="GUI" method="_on_game_won"]
[connection signal="game_won" from="." to="SoundController" method="play_game_won_sound"]
[connection signal="level_started" from="." to="World" method="_on_level_started"]
[connection signal="level_started" from="." to="GUI" method="_on_level_started"]
[connection signal="level_started" from="." to="SoundController" method="play_level_started_sound"]
[connection signal="score_updated" from="." to="GUI" method="_on_score_updated"]
[connection signal="secret_end" from="." to="World" method="_on_secret_end"]
[connection signal="player_died" from="World" to="." method="_game_over"]
[connection signal="player_maximum_speed_attained" from="World" to="GUI" method="_on_player_maximum_speed_attained"]
[connection signal="player_maximum_speed_attained" from="World" to="SoundController" method="play_survive_sound"]
[connection signal="player_scored" from="World" to="." method="_on_player_scored"]
[connection signal="player_speed_updated" from="World" to="GUI" method="_on_player_speed_updated"]
[connection signal="timeout" from="SecretEndTimer" to="." method="_secret_end"]
